--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-Helping Cats
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Helping Cats Worldwide</title>
+    <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      background-color: #fdfaf7;
+      color: #333;
+      max-width: 600px;
+      margin: 2rem auto;
+      padding: 1rem;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+    }
+    h1 {
+      color: #d2691e;
+    }
+    .donate {
+      margin-top: 20px;
+      padding: 10px;
+      background-color: #ffefd5;
+      border: 1px dashed #d2691e;
+      border-radius: 5px;
+    }
+    </style>
+    <!-- Fundraise Up: the new standard for online giving -->
+    <script>(function(w,d,s,n,a){if(!w[n]){var l='call,catch,on,once,set,then,track'
+    .split(','),i,o=function(n){return'function'==typeof n?o.l.push([arguments])&&o
+    :function(){return o.l.push([n,arguments])&&o}},t=d.getElementsByTagName(s)[0],
+    j=d.createElement(s);j.async=!0;j.src='https://cdn.fundraiseup.com/widget/'+a;
+    t.parentNode.insertBefore(j,t);o.s=Date.now();o.v=4;o.h=w.location.href;o.l=[];
+    for(i=0;i<7;i++)o[l[i]]=o(l[i]);w[n]=o}
+    })(window,document,'script','FundraiseUp','AEMZUDUM');</script>
+    <!-- End Fundraise Up -->
+
+    
+</head>
+<body>
+
+  <h1>Helping Cats Worldwide</h1>
+
+  <p>We are a small non-profit organization dedicated to rescuing, feeding, and finding homes for stray and abandoned cats across the globe. Every donation helps us provide food, shelter, and medical care for those who can’t ask for help themselves. Oh, are you still reading? Well, shout out to the Fundraise Up support team ;)</p>
+  <img src="Screenshot 2025-04-17 124638.png" style="max-width: 100%; height: auto; border-radius: 8px; margin-bottom: 1rem;">
+  <div class="donate">
+    <strong style="padding: 1%;">Want to help?</strong><br><br>
+    <a href="#XJKDHSTQ" style="display: none"></a>
+
+</body>
+</html>
