--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <img src="Screenshot 2025-04-17 124638.png" style="max-width: 100%; height: auto; border-radius: 8px; margin-bottom: 1rem;">
     <div class="donate">
     <strong style="padding: 1%;">Want to help?</strong><br><br>
+    <a href="#XCJDWQMU" style="display: none"></a>
     <a href="#XYKAAARB" style="display: none"></a>
 
 </body>
