small html changes

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 
     <p>We are a small non-profit organization dedicated to rescuing, feeding, and finding homes for stray and abandoned cats across the globe. Every donation helps us provide food, shelter, and medical care for those who can’t ask for help themselves. Oh, are you still reading? Well, shout out to the Fundraise Up support team ;)</p>
     <img src="Screenshot 2025-04-17 124638.png" style="max-width: 100%; height: auto; border-radius: 8px; margin-bottom: 1rem;">
+    <a href="#XCJDWQMU" style="display: none"></a><br>
     <div class="donate">
-    <strong style="padding: 1%;">Want to help?</strong><br><br>
-    <a href="#XCJDWQMU" style="display: none"></a>
+    <strong style="padding: 1%; font-size: 17px;">Want to help?</strong><br>
     <a href="#XYKAAARB" style="display: none"></a>
 
 </body>
