Donation form added

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <div class="donate">
     <strong style="padding: 1%; font-size: 17px;">Want to help?</strong><br>
     <a href="#XYKAAARB" style="display: none"></a>
+    <a href="#XMWJYWGY" style="display: none"></a>
 
 </body>
 </html>
